--- a/purchase-common/pom.xml
+++ b/purchase-common/pom.xml
@@ -97,6 +97,12 @@
             <artifactId>spring-cloud-starter-oauth2</artifactId>
         </dependency>
 
+        <!-- spring mvc -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
         <!-- 配置中心 -->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
